--- a/templates/register/show_infos.html.twig
+++ b/templates/register/show_infos.html.twig
@@ -17,9 +17,11 @@
         </li>
     {% endif %}
     <li class="btn btn-primary">
-        <a href="{{ path('app_dashboard_user', {'slug': infos|first.membership.structure.slug}) }}?{{ app.request.queryString }}" title="Retour à la liste des adhésions">
-            <i class='fas fa-th-list'></i> Adhésions
-        </a>
+        {% if infos is not empty %}
+            <a href="{{ path('app_dashboard_user', {'slug': infos|first.membership.structure.slug}) }}?{{ app.request.queryString }}" title="Retour à la liste des adhésions">
+                <i class='fas fa-th-list'></i> Adhésions
+            </a>
+        {% endif %}
     </li>
 {% endblock %}
 
