core_structure_* -> app_structure_* et correction de la suppression des membership

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,7 @@
     {% block navbar %}
     <nav id="menu" class="navbar navbar-expand-md sticky-top navbar-dark bg-dark">
         {% block logo %}
-        <a href="{{ path('core_structure_map') }}" class="navbar-brand mr-2">
+        <a href="{{ path('app_structure_map') }}" class="navbar-brand mr-2">
             <img src="{{ asset('images/pigass_medium.png') }}" alt="logo PIGASS">
         </a>
         {% endblock logo %}
