Présentation du champ search

--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -29,12 +29,12 @@
         <form class="btn btn-light">
             <div class="input-group">
                 <span class="input-group-addon">
-                    <i class='fas fa-search'></i>
+                    <i class='fas fa-search'></i> &nbsp;
                 </span>
                 <input type="text" class="form-control form-control-sm" id="search" name="search" value="{{ filters['search'] }}" />
                 <span class="input-group-btn">
                     <a href="{{ path('user_register_index', {'slug': slug, 'skipsearch': true}) }}" title="Supprimer la recherche">
-                        <i class='fas fa-trash'></i>
+                        &nbsp; <i class='fas fa-trash'></i>
                     </a>
                 </span>
             </div>
